cleanup deprecated methods