@@ -211,10 +211,10 @@ public class BVBActions
 		slNumDitherSamples.setToolTipText( "Pixels are interpolated from this many nearest neighbors when dithering. This is not very expensive, it's fine to turn it up to 8." );
 		slNumDitherSamples.setMinorTickSpacing(1);
 		Hashtable< Integer, JLabel > labelTable = new Hashtable<>();
-		labelTable.put( new Integer( 1 ), new JLabel("1") );
+		labelTable.put( Integer.valueOf( 1 ), new JLabel("1") );
 		for(int i = 1; i <= 4; i++)
 		{
-			labelTable.put( new Integer( i * 2 ), new JLabel(Integer.toString( i * 2 )) );
+			labelTable.put( Integer.valueOf( i * 2 ), new JLabel(Integer.toString( i * 2 )) );
 			
 		}
 		slNumDitherSamples.setLabelTable( labelTable );
@@ -248,7 +248,7 @@ public class BVBActions
 		dClipNear.addChangeListener( (e)->
 		{
 			int currNear =  ((Double)dClipNear.getValue()).intValue();
-			((SpinnerNumberModel)dCam.getModel()).setMinimum( new Double(currNear+5) );
+			((SpinnerNumberModel)dCam.getModel()).setMinimum( Double.valueOf( currNear + 5) );
 			if(currNear > ((Double)dCam.getValue()).intValue())
 			{
 				dCam.setValue( currNear + 5 );
