@@ -658,10 +658,10 @@ public class SpotsLoadDialog
 
 		for(int i = 0; i < 3; i++)
 		{
-			columnNames[i] = "Column"+Integer.toString( i+1 );
+			columnNames[i] = "Column" + Integer.toString( i+1 );
 			for(int j = 0; j < 3; j++)
 			{
-				data[i][j] = new Float(0.0f);
+				data[i][j] = Float.valueOf( 0.0f );
 			}
 		}
 		DefaultTableModel tableModel = new DefaultTableModel(data, columnNames) 
